--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@
 header {
     width: 100%;
     height: 40vh;
-    background-image: url('https://wallpaper-mania.com/wp-content/uploads/2018/09/High_resolution_wallpaper_background_ID_77700209853.jpg');
+    background-image: url('https://wallpaperset.com/w/full/5/7/3/21872.jpg');
     background-size: cover;
-    background-position: bottom;
+    background-position: center;
 }
 
 #container {
@@ -38,11 +38,17 @@ header {
 
 main {
     width: 100%;
+    background-image: url('https://wallpaper-mania.com/wp-content/uploads/2018/09/High_resolution_wallpaper_background_ID_77700209853.jpg');
+    background-size: cover;
+}
+
+.mainContainer {
+    width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
     gap: 3rem;
-    background-color: #ffe9ba;
+    background-color: #a0986bd5;
     padding: 2rem;
 }
 
