--- a/style.css
+++ b/style.css
@@ -9,37 +9,62 @@
 
 header {
     width: 100%;
-    height: 40vh;
-    background-image: url('https://wallpaperset.com/w/full/5/7/3/21872.jpg');
+    height: 100vh;
+    background-image: url('https://rare-gallery.com/mocahbig/451802-Ukiyo-e-Japanese-Art-artwork-Hokusai.jpg');
     background-size: cover;
-    background-position: center;
+    background-position: top;
 }
 
-#container {
-    width: 100%;
-    height: 100%;
-    background: #000000a8;
+#align {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
+#container {
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#000000a8 70%, #fffef4);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+}
+
+#span {
+    color: #ff4949;
+}
+
 #title {
-    font-size: 3rem;
+    font-size: 4rem;
     font-weight: bold;
     color: #fff;
 }
 
 #subtitle {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #fff;
+}
+
+#content {
     font-size: 1rem;
     color: #fff;
+    text-align: center;
+    padding: 3rem 10rem;
 }
 
 main {
     width: 100%;
-    background-image: url('https://wallpaper-mania.com/wp-content/uploads/2018/09/High_resolution_wallpaper_background_ID_77700209853.jpg');
     background-size: cover;
+}
+
+#mainTitle {
+    color: #000;
+    font-size: 1.5rem;
+    font-weight: bold;
 }
 
 .mainContainer {
@@ -48,14 +73,14 @@ main {
     align-items: center;
     flex-direction: column;
     gap: 3rem;
-    background-color: #a0986bd5;
+    background-color: #fffef4;
     padding: 2rem;
 }
 
 .card {
     width: 50%;
     cursor: pointer;
-    background-color: #fff;
+    background-color: #ffffff;
     border-radius: 0.2rem;
     padding: 2rem;
     display: flex;
@@ -64,6 +89,8 @@ main {
     justify-content: center;
     text-align: center;
     transition: 0.2s;
+    box-shadow: 1px 1px 15px #b9b8ab,
+        -1px -1px 15px #b9b8ab;
 }
 
 .card:hover {
